# domain-adaptation

./: .gitignore  pyproject.toml
scripts/: run_all_tasks.py  run_ros.py  run_smoke_test.py  run_sweep.py
src/: main.py
src/configs/: config.yaml
src/configs/dataset/: mini-office-31.yaml  office-31.yaml
src/configs/datasets/: mini-office-31.yaml  office-31.yaml
src/configs/method/: mic.yaml  ros.yaml  source_only.yaml
src/configs/methods/: source_only.yaml
src/datasets/: loader.py
src/methods/: base_solver.py  mic.py  ros.py
src/models/: backbones.py
src/utils/: __init__.py  config.py  utils.py
